As far as it will get

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="container">
       <header><h1>Will Trade Help?</h1></header>
       <div class="row">
-        <h3 class="col-sm-12">Editable Table:</h3>
-        
+        <h3 class="col-sm-12">Pleased to Meet You:</h3>
         <p class="introSentence"></p>
-          <table class="table table-bordered sampleTable col-sm-12">
+        <h2 class="col-sm-12">Editable Table:</h2>
+          <table class="table table-hover sampleTable col-sm-12">
             <tr class="tableGoodsOpCost">
               <td></td>
               <td class="editableTD"><span id="goodX" class="editable"></span> production per week if all time devoted to it</td>
@@ -43,7 +43,8 @@
               <td id="goodYgarthopCost"></td>
             </tr>
           </table>
-          <table class="table table-bordered sampleTableTotals col-sm-12">
+          <h2>Table of Totals:</h2>
+          <table class="table table-hover sampleTableTotals col-sm-12">
             <tr>
               <td></td>
               <td>Total before trade (autarky)</td>
