last of day, all good

--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
     
   </head>
   <body>
+    <header><h1>Will Trade Help?</h1></header>
     <div class="container">
-      <header><h1>Will Trade Help?</h1></header>
       <div class="row">
-        <h3 class="col-sm-12">Pleased to Meet You:</h3>
-        <p class="introSentence"></p>
+        <div class="introDiv">
+          <h3 class="col-sm-12">Pleased to Meet You:</h3>
+          <p class="introSentence col-sm-12"></p>
+        </div>
         <h2 class="col-sm-12">Editable Table:</h2>
           <table class="table table-hover sampleTable col-sm-12">
             <tr class="tableGoodsOpCost">
               <td></td>
-              <td class="editableTD"><span id="goodX" class="editable"></span> production per week if all time devoted to it</td>
+              <td class="editableTD"><strong>[<span id="goodX" class="editable"></span>]</strong> production per week if all time devoted to it</td>
               <td id="goodXopCost"><strong>Opportunity Cost</strong> (what must be given up to produce one unit of the first good)</td>
-              <td class="editableTD"><span id="goodY" class="editable"></span> production per week if all time devoted to it</td>
+              <td class="editableTD"><strong>[<span id="goodY" class="editable"></span>]</strong> production per week if all time devoted to it</td>
               <td id="goodYopCost"><strong>Opportunity Cost</strong> (what must be given up to produce one unit of the second good)</td>
             </tr>
             <tr class="tablewayne">
-              <td class="editableTD"><span id="wayne" class="editable"></span></td></td>
-              <td class="editableTD"><span id="goodXwayne" class="editable"></span></td>
+              <td class="editableTD"><strong>[<span id="wayne" class="editable"></span>]</strong</td></td>
+              <td class="editableTD"><strong>[<span id="goodXwayne" class="editable"></span>]</strong> per week</td>
               <td id="goodXwayneopCost"></td>
-              <td class="editableTD"><span  id="goodYwayne" class="editable"></span></td>
+              <td class="editableTD"><strong>[<span  id="goodYwayne" class="editable"></span>]</strong> per week</td>
               <td id="goodYwayneopCost"></td>
             </tr>
             <tr class="tablegarth">
-              <td class="editableTD"><span id="garth" class="editable"></span><br></td>
-              <td class="editableTD"><span id="goodXgarth" class="editable"></span></td>
+              <td class="editableTD"><strong>[<span id="garth" class="editable"></span>]</strong</td>
+              <td class="editableTD"><strong>[<span id="goodXgarth" class="editable"></span>]</strong> per week</td>
               <td id="goodXgarthopCost"></td>
-              <td class="editableTD"><span id="goodYgarth" class="editable"></span></td>
+              <td class="editableTD"><strong>[<span id="goodYgarth" class="editable"></span>]</strong> per week</td>
               <td id="goodYgarthopCost"></td>
             </tr>
           </table>
